import SwiftUI
import Charts

enum GraphPeriod: String, CaseIterable {
    case oneMonth = "1ヶ月"
    case oneYear = "1年"
    case allTime = "全期間"

    var calendar: Calendar.Component {
        switch self {
        case .oneMonth:
            return .month
...
